# solanacore-buildspace

./: README.md
Core 01/: README.md
Core 01/nft-minter-frontend/: .env
Core 01/nft-minter-frontend/components/: Connected.tsx
Core 01/nft-minter-frontend/pages/: index.tsx
Core 01/solana-student-intros-frontend/: README.md
Core 01/solana-student-intros-frontend/models/: StudentIntro.ts
Core 02/: README.md
Core 02/FaithfulDogs/candy-machine-ui/: package-lock.json  package.json
Core 02/LFGCoin/: README.md
Core 02/MADCoin/: package-lock.json  package.json
Core 02/MADCoin/src/: index.ts
Core 02/NFT-your-face/: README.md
Core 02/nft-buildoor/: .env
Core 03/: README.md
Core 03/Random Message/src/: lib.rs
Core 03/movie-review-program/src/: instruction.rs  lib.rs  state.rs
Core 03/student-review-program/src/: instruction.rs  lib.rs  state.rs
Core 04/: README.md
Core 05/anchor-nft-staking/: Anchor.toml  package-lock.json  package.json
Core 05/anchor-solana-movie-review-frontend/: package-lock.json  package.json
Core 05/anchor-staking-ui/: package-lock.json  package.json
Core 05/anchor-staking-ui/pages/: _app.tsx  (+1 more)
Core 05/counter/: Anchor.toml
Core 05/movie-review-program-cpi/: Anchor.toml
Core 05/movie-review-program-pda/: Anchor.toml
Core 05/movie-review-program-pda/programs/movie-review-program-pda/: Cargo.toml
Core 05/movie-review-program-pda/programs/movie-review-program-pda/src/: lib.rs
Core 06/anchor-nft-staking/: Anchor.toml  package-lock.json  package.json
Core 06/create-gear-tokens/: package-lock.json  package.json
(+57 files in other folders)
